[gd_scene load_steps=9 format=3 uid="uid://ji0y1ygsy1eo"]

[ext_resource type="Script" path="res://Codes/Uniques/Systems/LevelManager.gd" id="1_t4rih"]
[ext_resource type="Texture2D" uid="uid://65d5pf87ap4v" path="res://Textures/Instances/Interfaces/Pause.png" id="3_8aor3"]
[ext_resource type="Script" path="res://addons/platformer_system/InputBox.gd" id="3_klsa7"]
[ext_resource type="Resource" uid="uid://584wspji34c8" path="res://Ressources/Instances/InputPacks/LevelManager.tres" id="4_eatuc"]
[ext_resource type="PackedScene" uid="uid://bda283e0xnl5n" path="res://Scenes/Uniques/Maps/TheEnd.tscn" id="5_f7oxg"]

[sub_resource type="Animation" id="Animation_y3qui"]
resource_name = "Pause"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fill/Animations/Pause:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8fd2d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fill/Animations/Pause:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3lpde"]
_data = {
"Pause": SubResource("Animation_y3qui"),
"RESET": SubResource("Animation_8fd2d")
}

[node name="LevelManager" type="Control" node_paths=PackedStringArray("inputs", "level")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t4rih")
inputs = NodePath("Inputs")
level = NodePath("TheEnd")
rounds = 5

[node name="Screens" type="Control" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fill" type="ColorRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Animations" type="Control" parent="Fill"]
z_index = 2
texture_filter = 3
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0

[node name="Pause" type="Node2D" parent="Fill/Animations"]
modulate = Color(1, 1, 1, 0)
position = Vector2(480, 270)
scale = Vector2(2, 2)

[node name="Pause" type="Sprite2D" parent="Fill/Animations/Pause"]
texture = ExtResource("3_8aor3")

[node name="Inputs" type="Node" parent="."]
process_mode = 3
script = ExtResource("3_klsa7")
input_pack = ExtResource("4_eatuc")

[node name="Animations" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_3lpde")
}

[node name="TheEnd" parent="." instance=ExtResource("5_f7oxg")]

[connection signal="action_frames_maxed" from="Inputs" to="." method="_on_inputs_action_frames_maxed"]
[connection signal="action_just_pressed" from="Inputs" to="." method="_on_inputs_action_just_pressed"]
